freest/test/prog/invalid/scoping/MultipleDeclsType/MultipleDeclsType.fst
module MultipleDeclsType where

type Foo = Int

type Foo = String